--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "bundle": "NODE_ENV=development webpack",
+    "pressr": "NODE_ENV=development webpack",
     "ssr": "NODE_ENV=development babel-node react-dom-ssr.js"
   },
   "name": "xiaoma",
@@ -8,7 +8,10 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "@types/express": "^4.16.1",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
