--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@types/express": "^4.16.1",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/webpack": "^4.41.15",
     "express": "^4.16.4",
     "object-assign": "^4.0.1",
     "pug": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
